include/vsmc/vsmc.h

/// \defgroup C_API C API
/// @{

/// \defgroup C_API_RNG Random number generating
/// @{

/// \brief `vsmc::RNG`
typedef struct {
    int state[64];
} vsmc_rng;
/// \brief `sizeof(vsmc::RNG) + 4`
int vsmc_rng_size();
/// \brief `vsmc::RNG` constructor
void vsmc_rng_init(vsmc_rng *rng_ptr, int seed);
/// \brief `vsmc::RNG::seed`
void vsmc_rng_seed(vsmc_rng *rng_ptr, int seed);
/// \brief `vsmc::RNG::key`
void vsmc_rng_get_key(const vsmc_rng *rng_ptr, int n, int *key);
/// \brief `vsmc::RNG::key`
void vsmc_rng_set_key(vsmc_rng *rng_ptr, int n, const int *key);
/// \brief `vsmc::RNG::ctr`
void vsmc_rng_get_ctr(const vsmc_rng *rng_ptr, int n, int *ctr);
/// \brief `vsmc::RNG::ctr`
void vsmc_rng_set_ctr(vsmc_rng *rng_ptr, int n, const int *ctr);
/// \brief `vsmc::RNG::operator()`
void vsmc_rng_rand(vsmc_rng *rng_ptr, int n, int *r);
/// \brief `std::uniform_int_distribution<int>`
void vsmc_rng_uniform_int(vsmc_rng *rng_ptr, int n, int *r, int a, int b);
/// \brief `std::uniform_real_distribution<double>`
void vsmc_rng_uniform_real(
    vsmc_rng *rng_ptr, int n, double *r, double a, double b);
/// \brief `vsmc::UniformRealDistribution<double, Closed, Closed>`
void vsmc_rng_uniform_real_cc(
    vsmc_rng *rng_ptr, int n, double *r, double a, double b);
/// \brief `vsmc::UniformRealDistribution<double, Closed, Open>`
void vsmc_rng_uniform_real_co(
    vsmc_rng *rng_ptr, int n, double *r, double a, double b);
/// \brief `vsmc::UniformRealDistribution<double, Open, Closed>`
void vsmc_rng_uniform_real_oc(
    vsmc_rng *rng_ptr, int n, double *r, double a, double b);
/// \brief `vsmc::UniformRealDistribution<double, Open, Open>`
void vsmc_rng_uniform_real_oo(
    vsmc_rng *rng_ptr, int n, double *r, double a, double b);
/// \brief `std::bernoulli_distribution`
void vsmc_rng_bernoulli(vsmc_rng *rng_ptr, int n, int *r, double p);
/// \brief `std::binomial_distribution<int>`
void vsmc_rng_binomial(vsmc_rng *rng_ptr, int n, int *r, int t, double p);
/// \brief `std::negative_binomial_distribution<int>`
void vsmc_rng_negative_binomial(
    vsmc_rng *rng_ptr, int n, int *r, int k, double p);
/// \brief `std::geometri_distribution<int>`
void vsmc_rng_geometric(vsmc_rng *rng_ptr, int n, int *r, double p);
/// \brief `std::poisson_distribution<int>`
void vsmc_rng_poisson(vsmc_rng *rng_ptr, int n, int *r, double mean);
/// \brief `std::exponential_distribution<double>`
void vsmc_rng_exponential(vsmc_rng *rng_ptr, int n, double *r, double lambda);
/// \brief `std::gamma_distribution<double>`
void vsmc_rng_gamma(
    vsmc_rng *rng_ptr, int n, double *r, double shape, double scale);
/// \brief `std::weibull_distribution<double>`
void vsmc_rng_weibull(
    vsmc_rng *rng_ptr, int n, double *r, double shape, double scale);
/// \brief `std::extreme_value_distribution<double>`
void vsmc_rng_extreme_value(
    vsmc_rng *rng_ptr, int n, double *r, double location, double scale);
/// \brief `vsmc::NormalDistribution<double>`
void vsmc_rng_normal(
    vsmc_rng *rng_ptr, int n, double *r, double mean, double stddev);
/// \brief `std::lognormal_distribution<double>`
void vsmc_rng_lognormal(
    vsmc_rng *rng_ptr, int n, double *r, double m, double s);