include/vsmc/vsmc.f90

! ============================================================================
!  vSMC/include/vsmc/vsmc.hpp
! ----------------------------------------------------------------------------
!                          vSMC: Scalable Monte Carlo
! ----------------------------------------------------------------------------
!  Copyright (c) 2013-2015, Yan Zhou
!  All rights reserved.
!
!  Redistribution and use in source and binary forms, with or without
!  modification, are permitted provided that the following conditions are met:
!
!    Redistributions of source code must retain the above copyright notice,
!    this list of conditions and the following disclaimer.
!
!    Redistributions in binary form must reproduce the above copyright notice,
!    this list of conditions and the following disclaimer in the documentation
!    and/or other materials provided with the distribution.
!
!  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS AS IS
!  AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
!  IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
!  ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
!  LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
!  CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
!  SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
!  INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
!  CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
!  ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
!  POSSIBILITY OF SUCH DAMAGE.
! ============================================================================

module vsmc
    use, intrinsic :: iso_c_binding
    implicit none

    type, bind(c) :: vsmc_rng
        integer(kind = c_int), dimension(64) :: state
    end type vsmc_rng

    interface
        function vsmc_rng_size() bind(c)
            use, intrinsic :: iso_c_binding
            integer(kind = c_int) :: vsmc_rng_size
        end function vsmc_rng_size
    end interface

    interface
        subroutine vsmc_rng_init(rng, seed) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: seed
        end subroutine vsmc_rng_init
    end interface

    interface
        subroutine vsmc_rng_seed(rng, seed) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: seed
        end subroutine vsmc_rng_seed
    end interface

    interface
        subroutine vsmc_rng_get_key(rng, n, key) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: key
        end subroutine vsmc_rng_get_key
    end interface

    interface
        subroutine vsmc_rng_set_key(rng, n, key) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: key
        end subroutine vsmc_rng_set_key
    end interface

    interface
        subroutine vsmc_rng_get_ctr(rng, n, ctr) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: ctr
        end subroutine vsmc_rng_get_ctr
    end interface

    interface
        subroutine vsmc_rng_set_ctr(rng, n, ctr) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: ctr
        end subroutine vsmc_rng_set_ctr
    end interface

    interface
        subroutine vsmc_rng_rand(rng, n, r) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: r
        end subroutine vsmc_rng_rand
    end interface

    interface
        subroutine vsmc_rng_uniform_int(rng, n, r, a, b) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: r
            integer(kind = c_int), value :: a
            integer(kind = c_int), value :: b
        end subroutine vsmc_rng_uniform_int
    end interface

    interface
        subroutine vsmc_rng_uniform_real(rng, n, r, a, b) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: a
            real(kind = c_double), value :: b
        end subroutine vsmc_rng_uniform_real
    end interface

    interface
        subroutine vsmc_rng_uniform_real_cc(rng, n, r, a, b) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: a
            real(kind = c_double), value :: b
        end subroutine vsmc_rng_uniform_real_cc
    end interface

    interface
        subroutine vsmc_rng_uniform_real_co(rng, n, r, a, b) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: a
            real(kind = c_double), value :: b
        end subroutine vsmc_rng_uniform_real_co
    end interface

    interface
        subroutine vsmc_rng_uniform_real_oc(rng, n, r, a, b) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: a
            real(kind = c_double), value :: b
        end subroutine vsmc_rng_uniform_real_oc
    end interface

    interface
        subroutine vsmc_rng_uniform_real_oo(rng, n, r, a, b) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: a
            real(kind = c_double), value :: b
        end subroutine vsmc_rng_uniform_real_oo
    end interface

    interface
        subroutine vsmc_rng_bernoulli(rng, n, r, p) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: r
            real(kind = c_double), value :: p
        end subroutine vsmc_rng_bernoulli
    end interface

    interface
        subroutine vsmc_rng_binomial(rng, n, r, t, p) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: r
            integer(kind = c_int), value :: t
            real(kind = c_double), value :: p
        end subroutine vsmc_rng_binomial
    end interface

    interface
        subroutine vsmc_rng_negative_binomial(rng, n, r, k, p) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: r
            integer(kind = c_int), value :: k
            real(kind = c_double), value :: p
        end subroutine vsmc_rng_negative_binomial
    end interface

    interface
        subroutine vsmc_rng_geometric(rng, n, r, p) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: r
            real(kind = c_double), value :: p
        end subroutine vsmc_rng_geometric
    end interface

    interface
        subroutine vsmc_rng_poisson(rng, n, r, mean) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            integer(kind = c_int), dimension(*) :: r
            real(kind = c_double), value :: mean
        end subroutine vsmc_rng_poisson
    end interface

    interface
        subroutine vsmc_rng_exponential(rng, n, r, lambda) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: rate
        end subroutine vsmc_rng_exponential
    end interface

    interface
        subroutine vsmc_rng_gamma(rng, n, r, shap, scal) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: shap
            real(kind = c_double), value :: scal
        end subroutine vsmc_rng_gamma
    end interface

    interface
        subroutine vsmc_rng_weibull(rng, n, r, shap, scal) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: shap
            real(kind = c_double), value :: scal
        end subroutine vsmc_rng_weibull
    end interface

    interface
        subroutine vsmc_rng_extreme_value(rng, n, r, location, scal) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: location
            real(kind = c_double), value :: scal
        end subroutine vsmc_rng_extreme_value
    end interface

    interface
        subroutine vsmc_rng_normal(rng, n, r, mean, stddev) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: mean
            real(kind = c_double), value :: stddev
        end subroutine vsmc_rng_normal
    end interface

    interface
        subroutine vsmc_rng_lognormal(rng, n, r, m, s) bind(c)
            use, intrinsic :: iso_c_binding
            import :: vsmc_rng
            type(vsmc_rng) :: rng
            integer(kind = c_int), value :: n
            real(kind = c_double), dimension(*) :: r
            real(kind = c_double), value :: m
            real(kind = c_double), value :: s
        end subroutine vsmc_rng_lognormal
    end interface
